# question-agent

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  dev.sh  harness-errors.md  package-lock.json  pyproject.toml
.claude/agents/: pre-dev-agent.md  progressive-planner.md  scaffold.md  summarize-agent.md
.harness/: ai-question-agent-toolchain.md
frontend/: .env.example  .gitignore  AGENTS.md  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
question_agent/: __init__.py  config.py  logging_config.py  main.py
tests/: __init__.py  conftest.py  test_chapter_detector.py  test_chapter_hybrid.py  test_chapter_llm.py  test_chapter_tree.py  test_chat_graph.py  test_chat_tools.py  test_checkpointer_connection.py  test_correct_answer.py  test_difficulty_level.py  test_dispatch.py  test_edge_cases.py  test_edge_chat_graph.py  test_edge_chat_layout.py  test_edge_frontend_proxy.py  test_edge_generator_prompts.py  test_edge_http_methods.py  test_edge_intent_dispatch.py  test_edge_kb_api.py  test_edge_kb_database.py  test_edge_kb_delete.py  test_edge_kb_delete_extra.py  test_edge_kb_document_upload.py  test_edge_kb_upload_validation.py  test_edge_questions.py  test_edge_questions_from_file.py  test_edge_react_routing.py  test_edge_ws_streaming.py  test_extract_docx.py  test_extract_pdf.py  test_extract_structured.py  test_extract_text.py  test_extract_unified.py  test_health.py  test_kb_api.py  test_kb_proxy_route.py  test_knowledge_detector.py  test_knowledge_endpoint.py  test_knowledge_hybrid.py  (+12 more)
(+119 files in other folders)
