[project]
name = "question-agent"
version = "0.1.0"
description = "AI 智能出题智能体"
readme = "README.md"
authors = [
    { name = "zhangzhong", email = "im.zhong@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.27",
    "uvicorn[standard]>=0.46.0",
    "zai-sdk>=0.2.2",
]

[project.scripts]
question-agent = "question_agent.main:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".harness", "harness", ".venv", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["question_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
